SLCORE-465 Synchronize Sonar projects from the backend